# Parallel-Computation-Map-Reduce-Algorithm

./: .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: lint.github.yml  test.github.yml
RestAPI/: urls.py
RestAPI/management/commands/: generate_users.py
parrallelComputationMapReduce/: asgi.py  settings.py  urls.py  wsgi.py
parrallelComputationMapReduce/management/commands/: generate_users.py
