[tool.poetry]
name = "parallercomputationmapreduce"
version = "0.1.0"
description = "Develop a distributed system for performing parallel computation, along the lines of Map-Reduce"
authors = ["Konstantinos <amplianitiskonstas@gmail.com>"]
readme = "README.md"


[tool.poetry.group.test]
optional=true

[tool.poetry.group.docs]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
