[tool.poetry]
name = "parallercomputationmapreduce"
version = "0.1.0"
description = "Develop a distributed system for performing parallel computation, along the lines of Map-Reduce"
authors = ["Konstantinos <amplianitiskonstas@gmail.com>"]
readme = "README.md"


[tool.poetry.group.test]
optional=true

[tool.poetry.group.docs]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
fixit = "^2.1.0"
jedi = "^0.19.1"
safety = "^2.3.5"

[tool.black]
line-length = 79
target-version = ['py27']
[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 27


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
